--- a/src/app/agenda-task/agenda-task.component.scss
+++ b/src/app/agenda-task/agenda-task.component.scss
@@ -53,3 +53,9 @@ $task-done-color: #a5b1c2;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
+
+.reminder-date {
+  color: #757575;
+  font-size: small;
+  margin-left: 25px;
+}
